[package]
name = "rutile_r2r"
version = "0.5.2"
edition = "2024"
authors = ["David Doose <david.doose@onera.fr>"]
license = "LGPL-3.0-only"
description = "Simple ROS2 r2r binding"
repository = "https://github.com/DavidD12/rutile_r2r"
keywords = ["ROS2", "r2r"]

# [env]
# IDL_PACKAGE_FILTER = "std_msgs,example_interfaces"

[dependencies]
futures = { version = "0.3.31", features = ["thread-pool"] }
r2r = "0.9.4"
rand = "0.9.0"
tokio = { version = "1.44.2", features = ["full"] }

[lib]
name = "rutile_r2r"
path = "src/lib.rs"

#---------- Futrure ----------

[[bin]]
name = "future_client_unlock"
path = "bin/future_client_unlock.rs"

[[bin]]
name = "future_publisher"
path = "bin/future_publisher.rs"

[[bin]]
name = "future_subscriber"
path = "bin/future_subscriber.rs"

[[bin]]
name = "future_service"
path = "bin/future_service.rs"

[[bin]]
name = "future_client"
path = "bin/future_client.rs"

#---------- Tokio ----------

[[bin]]
name = "tokio_publisher"
path = "bin/tokio_publisher.rs"

[[bin]]
name = "tokio_subscriber"
path = "bin/tokio_subscriber.rs"

[[bin]]
name = "tokio_service"
path = "bin/tokio_service.rs"

[[bin]]
name = "tokio_client"
path = "bin/tokio_client.rs"
