[package]
name = "rutile_r2r"
version = "0.5.2"
edition = "2024"
authors = ["David Doose <david.doose@onera.fr>"]
license = "LGPL-3.0-only"
description = "Simple ROS2 r2r binding"
repository = "https://github.com/DavidD12/rutile_r2r"
keywords = ["ROS2", "r2r"]

# [env]
# IDL_PACKAGE_FILTER = "std_msgs,example_interfaces"

[dependencies]
futures = { version = "0.3.31", features = ["thread-pool"] }
r2r = "0.9.4"
rand = "0.9.0"
tokio = { version = "1.44.2", features = ["full"] }

[lib]
name = "rutile_r2r"
path = "src/lib.rs"

#---------- Future ----------

[[bin]]
name = "future_client_unlock"
path = "example/future/future_client_unlock.rs"

[[bin]]
name = "future_publisher"
path = "example/future/future_publisher.rs"

[[bin]]
name = "future_subscriber"
path = "example/future/future_subscriber.rs"

[[bin]]
name = "future_service"
path = "example/future/future_service.rs"

[[bin]]
name = "future_client"
path = "example/future/future_client.rs"

#---------- Future Mono ----------

[[bin]]
name = "future_mono_client_unlock"
path = "example/future_mono/future_mono_client_unlock.rs"

[[bin]]
name = "future_mono_publisher"
path = "example/future_mono/future_mono_publisher.rs"

[[bin]]
name = "future_mono_subscriber"
path = "example/future_mono/future_mono_subscriber.rs"

[[bin]]
name = "future_mono_service"
path = "example/future_mono/future_mono_service.rs"

[[bin]]
name = "future_mono_client"
path = "example/future_mono/future_mono_client.rs"

#---------- Tokio ----------

[[bin]]
name = "tokio_publisher"
path = "example/tokio/tokio_publisher.rs"

[[bin]]
name = "tokio_subscriber"
path = "example/tokio/tokio_subscriber.rs"

[[bin]]
name = "tokio_service"
path = "example/tokio/tokio_service.rs"

[[bin]]
name = "tokio_client"
path = "example/tokio/tokio_client.rs"

#---------- Tokio Mono ----------

[[bin]]
name = "tokio_mono_publisher"
path = "example/tokio_mono/tokio_mono_publisher.rs"

[[bin]]
name = "tokio_mono_subscriber"
path = "example/tokio_mono/tokio_mono_subscriber.rs"

[[bin]]
name = "tokio_mono_service"
path = "example/tokio_mono/tokio_mono_service.rs"

[[bin]]
name = "tokio_mono_client"
path = "example/tokio_mono/tokio_mono_client.rs"
