[package]
name = "rutile_r2r"
version = "0.7.1"
edition = "2024"
authors = ["David Doose <david.doose@onera.fr>"]
license = "LGPL-3.0-only"
description = "Simple ROS2 r2r binding"
repository = "https://github.com/DavidD12/rutile_r2r"
readme = "README.md"
keywords = ["ROS2", "r2r"]

# [env]
# IDL_PACKAGE_FILTER = "std_msgs,example_interfaces"

[dependencies]
futures = { version = "0.3.31", features = ["thread-pool"] }
r2r = "0.9.4"
rand = "0.9.0"
tokio = { version = "1.44.2", features = ["full"] }

[lib]
name = "rutile_r2r"
path = "src/lib.rs"

#---------- Mono Sync ----------

[[bin]]
name = "mono_client_unlock"
path = "example/mono/client_unlock.rs"

[[bin]]
name = "mono_publisher"
path = "example/mono/publisher.rs"

[[bin]]
name = "mono_subscriber"
path = "example/mono/subscriber.rs"

[[bin]]
name = "mono_service"
path = "example/mono/service.rs"

[[bin]]
name = "mono_client"
path = "example/mono/client.rs"

[[bin]]
name = "mono_client_blocking"
path = "example/mono/client_blocking.rs"

[[bin]]
name = "mono_client_callback"
path = "example/mono/client_callback.rs"

[[bin]]
name = "mono_macro_wall_timer"
path = "example/mono/macro_wall_timer.rs"

[[bin]]
name = "mono_macro_subscription"
path = "example/mono/macro_subscription.rs"

[[bin]]
name = "mono_macro_service"
path = "example/mono/macro_service.rs"

#---------- Future ----------

[[bin]]
name = "future_client_unlock"
path = "example/future/client_unlock.rs"

[[bin]]
name = "future_publisher"
path = "example/future/publisher.rs"

[[bin]]
name = "future_subscriber"
path = "example/future/subscriber.rs"

[[bin]]
name = "future_service"
path = "example/future/service.rs"

[[bin]]
name = "future_client"
path = "example/future/client.rs"

[[bin]]
name = "future_macro_wall_timer"
path = "example/future/macro_wall_timer.rs"

[[bin]]
name = "future_macro_subscription"
path = "example/future/macro_subscription.rs"

[[bin]]
name = "future_macro_service"
path = "example/future/macro_service.rs"

#---------- Future Mono ----------

[[bin]]
name = "future_mono_client_unlock"
path = "example/future_mono/client_unlock.rs"

[[bin]]
name = "future_mono_publisher"
path = "example/future_mono/publisher.rs"

[[bin]]
name = "future_mono_subscriber"
path = "example/future_mono/subscriber.rs"

[[bin]]
name = "future_mono_service"
path = "example/future_mono/service.rs"

[[bin]]
name = "future_mono_client"
path = "example/future_mono/client.rs"

[[bin]]
name = "future_mono_macro_wall_timer"
path = "example/future_mono/macro_wall_timer.rs"

[[bin]]
name = "future_mono_macro_subscription"
path = "example/future_mono/macro_subscription.rs"

[[bin]]
name = "future_mono_macro_service"
path = "example/future_mono/macro_service.rs"

#---------- Tokio ----------

[[bin]]
name = "tokio_publisher"
path = "example/tokio/publisher.rs"

[[bin]]
name = "tokio_subscriber"
path = "example/tokio/subscriber.rs"

[[bin]]
name = "tokio_service"
path = "example/tokio/service.rs"

[[bin]]
name = "tokio_client"
path = "example/tokio/client.rs"

[[bin]]
name = "tokio_macro_wall_timer"
path = "example/tokio/macro_wall_timer.rs"

[[bin]]
name = "tokio_macro_subscription"
path = "example/tokio/macro_subscription.rs"

[[bin]]
name = "tokio_macro_service"
path = "example/tokio/macro_service.rs"

#---------- Tokio Mono ----------

[[bin]]
name = "tokio_mono_publisher"
path = "example/tokio_mono/publisher.rs"

[[bin]]
name = "tokio_mono_subscriber"
path = "example/tokio_mono/subscriber.rs"

[[bin]]
name = "tokio_mono_service"
path = "example/tokio_mono/service.rs"

[[bin]]
name = "tokio_mono_client"
path = "example/tokio_mono/client.rs"

[[bin]]
name = "tokio_mono_macro_wall_timer"
path = "example/tokio_mono/macro_wall_timer.rs"

[[bin]]
name = "tokio_mono_macro_subscription"
path = "example/tokio_mono/macro_subscription.rs"

[[bin]]
name = "tokio_mono_macro_service"
path = "example/tokio_mono/macro_service.rs"
